cleaned up, formatted and commented code
